unpackaged/config/npspdataloader/objects/npsp__DataImport__c.object
<CustomObject>
    <fields>
        <fullName>Contact1_Birth_City_Province__c</fullName>
        <label>Contact1 Birth City, Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Country_of_Birth__c</fullName>
        <label>Contact1 Country of Birth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Gender__c</fullName>
        <label>Contact1 Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_HomeParish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact1 Home Parish</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Contact1 Home Parish)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact1_UCI__c</fullName>
        <label>Contact1 UCI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Birth_City_Province__c</fullName>
        <label>Contact2 Birth City, Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Country_of_Birth__c</fullName>
        <label>Contact2 Country of Birth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Gender__c</fullName>
        <label>Contact2 Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_HomeParish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2 Home Parish</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Contact2 Home Parish)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact2_UCI__c</fullName>
        <label>Contact2 UCI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgEng_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgEng Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPSP Data Imports (ProgEng Client)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgEng_ConstituentGroup__c</fullName>
        <description>Refugees-related</description>
        <inlineHelpText>Refugees-related</inlineHelpText>
        <label>ProgEng ConstituentGroup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgEng_Govt_Appl__c</fullName>
        <label>ProgEng Govt Appl #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgEng_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgEng Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (ProgEng Household)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_Household</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgEng_Import_Status__c</fullName>
        <label>ProgEng Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgEng_Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgEng Imported</label>
        <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgEng_Legacy_Notes__c</fullName>
        <label>ProgEng Legacy Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgEng_Program_Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgEng Program Cohort</label>
        <referenceTo>pmdm__ProgramCohort__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgEng_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgEng Program</label>
        <referenceTo>pmdm__Program__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgEng_Record_Type_ID__c</fullName>
        <label>ProgEng Record Type ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgEng_Role__c</fullName>
        <label>ProgEng Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgEng_Stage__c</fullName>
        <label>ProgEng Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Application Denied</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Active Member</fullName>
                </value>
                <value>
                    <fullName>Leader</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgEng_Start_Date__c</fullName>
        <label>ProgEng Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prog_Visa_Office__c</fullName>
        <description>refugees</description>
        <inlineHelpText>refugees</inlineHelpText>
        <label>Prog Visa Office</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_1_Import_Status__c</fullName>
        <label>Relationship 1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_1_Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship 1 Imported</label>
        <referenceTo>npe4__Relationship__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_1_Type__c</fullName>
        <label>Relationship 1 Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>